--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-naver-maps": "^0.1.4",
     "react-router-dom": "^6.28.0",
     "ts-node": "^10.9.2",
-    "unplugin-auto-import": "^20.1.0"
+    "unplugin-auto-import": "^20.1.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
